compiler/testData/diagnostics/tests/controlStructures/nestedLoopsWithMultipleLabels.kt
// FIR_IDENTICAL
fun test() {
    a@ b@ while(true) {
        konst f = {
            <!NOT_A_FUNCTION_LABEL!>return@a<!>
        }
        break@b
    }
}
